--- a/calendar-styles.css
+++ b/calendar-styles.css
@@ -4,7 +4,7 @@
     max-width: 1000px !important;
     width: 100% !important;
     display: inline-table !important;
-    background: #f9f9f9 !important;
+    background: #ff0000 !important;
     color: #000 !important;
     font: 300 100%/1.5em 'Montserrat', sans-serif !important;
     margin: 0 !important;
